# NSU

11_contest/: 1.c  2.c  3.c
12_contest/: 1.c  2.c  3.c
13_contest/: 1.c  2.c  3.c
1_contest/: 1.c  2.c  3.c  4.c
3_contest/: 1  1.c  2  2.c  3.c  4.c  5  5.c
4_contest/: 1.c  2.c  3.c  4.c  5.c  input.txt  output.txt
5_contest/: 1  1.c  2.c  3.c  4.c
6_contest/: 1.c  2.c  3.c  4.c  output.txt
7_contest/: 1.c  2.c  3.c  input.txt  output.txt
8_contest/: 1.c  2.c  3  3.c  output.txt
9_contest/: 1.c  2.c
avtomat/Algo_bin_tree/: 1miss.txt  Algorithms.c  Algorithms.h  CMakeLists.txt  adjacency_list.c  adjacency_list.h  avl-tree.c  avl_tree.c  avl_tree.h  bfs.c  bfs.h  deque.c  deque.h  dfs.c  dfs.h  main.c  queue.c  queue.h  stack.c  stack.h  steck.c  steck.h  test_avl_tree.c  tree.c  tree.h  vector.c  vector.h
avtomat/Doctors_and_patients/: Base.c  Base.h  CMakeLists.txt  Doctor.c  Doctor.h  Patient.c  Patient.h  database.c  database.h  doctor.c  doctor.h  main.c  makefile  miss.txt  patient.c  patient.h  str.c  str.h  to_bin.c  to_bin.h  to_txt.c  to_txt.h
avtomat/matrix_and_14/: CMakeLists.txt  adjacency_list.c  adjacency_list.h  adjacency_matrix.c  adjacency_matrix.h  convert_matrixes.c  convert_matrixes.h  incidence_matrix.c  incidence_matrix.h  list_of_edges.c  list_of_edges.h  main.c  makefile  test_convert.c  vector.c  vector.h
avtomat/matrix_and_14/14_contest/: 1  1.c  2.c  3.c  4.c
lessons/: 1_lesson  1_lesson.c
